feat: jenkins 가 deployment.yaml 을 수정하도록 업데이트
2025-08-08
1. 파이프라인에 배포 매니페스트 업데이트 스테이지 추가

--- a/apps/backend/Jenkinsfile
+++ b/apps/backend/Jenkinsfile
@@ -76,7 +76,7 @@ pipeline {
                 sh """
                 git config user.email "qmzo553@gmail.com"
                 git config user.name "박희준"
-                git add k8s/app/deployment.yaml
+                git add apps/backend/k8s/app/deployment.yaml
                 git commit -m "Update backend image to ${DOCKER_IMAGE}:${IMAGE_TAG}"
                 git push origin feature/deploy
                 """
