feat: jenkinsfile customer CI/CD 구현
25-08-08
1.  jenkinsfile customer CI/CD 구현

--- a/apps/frontend/Jenkinsfile
+++ b/apps/frontend/Jenkinsfile
@@ -1,5 +1,3 @@
-def CHANGED_FILES = ""
-
 pipeline {
     agent none
 
@@ -23,20 +21,6 @@ pipeline {
 
                 sh 'echo "Checked out branch ${GIT_BRANCH} from ${GIT_URL}"'
                 stash includes: '**/*', name: 'frontend-source-code'
-
-                script {
-                    CHANGED_FILES = sh(
-                        script: "git diff --name-only ${beforeCommit} ${afterCommit}",
-                        returnStdout: true
-                    ).trim()
-
-                    def isRiderChanged = CHANGED_FILES.tokenize('\n').any { it.startsWith('apps/frontend/rider/') }
-                    def isCustomerChanged = CHANGED_FILES.tokenize('\n').any { it.startsWith('apps/frontend/customer/') }
-
-                    echo "Rider changed? ${isRiderChanged}"
-                    echo "Customer changed? ${isCustomerChanged}"
-                    sh "echo \"Changed files:\\n${CHANGED_FILES}\""
-                }
             }
         }
 
@@ -59,9 +43,22 @@ pipeline {
                         sh "echo Building the application..."
                         sh 'npm run build'
                     }
+                    
                 }
 
                 stash includes: 'apps/frontend/rider/dist/**/*', name: 'frontend-rider-build'
+                
+                script {
+                    dir('apps/frontend/customer') {
+                        sh "echo Current directory: ${pwd()}"
+                        sh "echo Installing dependencies and building the application..."
+                        sh "npm install"
+                        sh "echo Building the application..."
+                        sh 'npm run build'
+                    }
+                }
+
+                stash includes: 'apps/frontend/rider/dist/**/*', name: 'frontend-customer-build'
             }
         }
 
@@ -82,8 +79,19 @@ pipeline {
                         sh "echo Building Docker image..."
                         sh "docker build -t ${DOCKER_IMAGE_RIDER}:${IMAGE_TAG} ."
                     }
-                    sh "echo Docker image built successfully."
+                    sh "echo Docker image for rider built successfully."
                     sh "docker tag ${DOCKER_IMAGE_RIDER}:${IMAGE_TAG} ${DOCKER_IMAGE_RIDER}:latest"
+                }
+
+                script {
+                    dir('apps/frontend/customer') {
+                        unstash 'frontend-customer-build'
+                        sh "echo Current directory: ${pwd()}"
+                        sh "echo Building Docker image for customer..."
+                        sh "docker build -t ${DOCKER_IMAGE_CUSTOMER}:${IMAGE_TAG} ."
+                    }
+                    sh "echo Docker image for customer built successfully."
+                    sh "docker tag ${DOCKER_IMAGE_CUSTOMER}:${IMAGE_TAG} ${DOCKER_IMAGE_CUSTOMER}:latest"
                 }
             }
         }
@@ -96,11 +104,17 @@ pipeline {
                 }   
             }
             steps {
-                sh "echo Deploying application..."
+                sh "echo Deploying rider application..."
                 sh "docker stop ${DOCKER_CONTAINER_RIDER} || true"
                 sh "docker rm ${DOCKER_CONTAINER_RIDER} || true"
                 sh "docker run -d --name ${DOCKER_CONTAINER_RIDER} --restart=unless-stopped -p 7080:7080 ${DOCKER_IMAGE_RIDER}:${IMAGE_TAG}"
                 sh "echo Application deployed successfully."
+
+                sh "echo Deploying customer application..."
+                sh "docker stop ${DOCKER_CONTAINER_CUSTOMER} || true"
+                sh "docker rm ${DOCKER_CONTAINER_CUSTOMER} || true"
+                sh "docker run -d --name ${DOCKER_CONTAINER_CUSTOMER} --restart=unless-stopped -p 7081:7080 ${DOCKER_IMAGE_CUSTOMER}:${IMAGE_TAG}"
+                sh "echo Customer application deployed successfully."
             }
         }
     }
