--- a/apps/backend/k8s/app/deployment.yaml
+++ b/apps/backend/k8s/app/deployment.yaml
@@ -31,7 +31,7 @@ spec:
         kubernetes.io/hostname: k8s-worker1
       containers:
         - name: linky-backend-1
-          image: parkheejun/linky-backend:1.0.0
+          image: parkheejun/linky-backend:1.0.0-20250808_141210
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
