chore: 서버 리소스 크기 조절
2025-08-08
1. 서버 리소스 크기 조절

--- a/apps/backend/k8s/redis/redis-deployment.yaml
+++ b/apps/backend/k8s/redis/redis-deployment.yaml
@@ -38,5 +38,5 @@ spec:
               memory: "512Mi"
               cpu: "200m"
             limits:
-              memory: "1Gi"
+              memory: "512Mi"
               cpu: "500m"
