--- a/apps/backend/k8s/postgresql/postgresql-pv.yaml
+++ b/apps/backend/k8s/postgresql/postgresql-pv.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mysql-pv
+  name: postgresql-pv
   labels:
-    app: mysql
+    app: postgresql
 spec:
   capacity:
     storage: 10Gi
@@ -12,7 +12,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: local-storage
   hostPath:
-    path: /data/mysql
+    path: /data/postgresql
   nodeAffinity:
     required:
       nodeSelectorTerms:
