feat: 젠킨스 빌드 병렬처리
25-08-08
1. npm 빌드도 병렬처리로 하도록 기능 구현

--- a/apps/frontend/Jenkinsfile
+++ b/apps/frontend/Jenkinsfile
@@ -36,29 +36,29 @@ pipeline {
                 unstash 'frontend-source-code'
 
                 script {
-                    dir('apps/frontend/rider') {
-                        sh "echo Current directory: ${pwd()}"
-                        sh "echo Installing dependencies and building the application..."
-                        sh "npm install"
-                        sh "echo Building the application..."
-                        sh 'npm run build'
+                    parallel {
+                        riderBuild: {
+                            dir('apps/frontend/rider') {
+                                sh "echo Current directory: ${pwd()}"
+                                sh "echo Installing dependencies and building the application..."
+                                sh "npm install"
+                                sh "echo Building the application..."
+                                sh 'npm run build'
+                            }
+                            stash includes: 'apps/frontend/rider/dist/**/*', name: 'frontend-rider-build'
+                        },
+                        customerBuild: {
+                            dir('apps/frontend/customer') {
+                                sh "echo Current directory: ${pwd()}"
+                                sh "echo Installing dependencies and building the application..."
+                                sh "npm install"
+                                sh "echo Building the application..."
+                                sh 'npm run build'
+                            }
+                            stash includes: 'apps/frontend/customer/dist/**/*', name: 'frontend-customer-build'
+                        }
                     }
-                    
                 }
-
-                stash includes: 'apps/frontend/rider/dist/**/*', name: 'frontend-rider-build'
-                
-                script {
-                    dir('apps/frontend/customer') {
-                        sh "echo Current directory: ${pwd()}"
-                        sh "echo Installing dependencies and building the application..."
-                        sh "npm install"
-                        sh "echo Building the application..."
-                        sh 'npm run build'
-                    }
-                }
-
-                stash includes: 'apps/frontend/rider/dist/**/*', name: 'frontend-customer-build'
             }
         }
 
