fix: 젠킨스 문법오류 수정
25-08-08
1. 젠킨스 parallel 중괄호 -> 소괄호로 변경

--- a/apps/frontend/Jenkinsfile
+++ b/apps/frontend/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
                 unstash 'frontend-source-code'
 
                 script {
-                    parallel {
+                    parallel(
                         riderBuild: {
                             dir('apps/frontend/rider') {
                                 sh "echo Current directory: ${pwd()}"
@@ -57,7 +57,7 @@ pipeline {
                             }
                             stash includes: 'apps/frontend/customer/dist/**/*', name: 'frontend-customer-build'
                         }
-                    }
+                    )
                 }
             }
         }
