--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17
-WORKDIR .
-COPY ./build/libs/linky-0.0.1-SNAPSHOT.jar /app.jar
-ENTRYPOINT ["java", "-Dspring.profiles.active=${spring_profiles_active}", "-jar", "/app.jar"]
+WORKDIR /usr/src/myapp
+COPY ./build/libs/linky-0.0.1-SNAPSHOT.jar ./app.jar
+ENTRYPOINT ["java", "-Dspring.profiles.active=${spring_profiles_active}", "-jar", "app.jar"]
 EXPOSE 8080
