--- a/apps/robotics/ros2_ws/src/navigator_pkg/package.xml
+++ b/apps/robotics/ros2_ws/src/navigator_pkg/package.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>video_demo_pkg</name>
+  <name>navigator_pkg</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="juno980220@naver.com">c102</maintainer>
   <license>TODO: License declaration</license>
-
-  <depend>rcl_py</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
