--- a/apps/frontend/rider/package.json
+++ b/apps/frontend/rider/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "qrcode": "^1.5.4",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
