chore: node selector update
2025-08-11
1. 백엔드 node selector 수정
2. mysql node selector 수정
3. redis node selector 수정

--- a/apps/backend/k8s/redis/redis-deployment.yaml
+++ b/apps/backend/k8s/redis/redis-deployment.yaml
@@ -19,9 +19,9 @@ spec:
         - name: redis-stack
           image: redis/redis-stack-server:latest
           ports:
-            - containerPort: 6379   # Redis 서버 포트
+            - containerPort: 6379
               name: redis
-            - containerPort: 8001   # RedisInsight UI 포트
+            - containerPort: 8001
               name: redis-ui
           env:
             - name: REDIS_PASSWORD
