--- a/apps/backend/k8s/app/deployment.yaml
+++ b/apps/backend/k8s/app/deployment.yaml
@@ -28,7 +28,7 @@ spec:
         blue-green-no: "1"
     spec:
       nodeSelector:
-        kubernetes.io/hostname: k8s-worker1
+        kubernetes.io/hostname: k8s-master
       containers:
         - name: linky-backend-1
           image: parkheejun/linky-backend:1.0.0-20250808_152324
