--- a/apps/backend/k8s/postgresql/postgresql-pv.yaml
+++ b/apps/backend/k8s/postgresql/postgresql-pv.yaml
@@ -20,4 +20,4 @@ spec:
             - key: kubernetes.io/hostname
               operator: In
               values:
-                - k8s-worker1
+                - k8s-master
