chore: node selector update
2025-08-11
1. backend node selector 수정

--- a/apps/backend/k8s/app/deployment.yaml
+++ b/apps/backend/k8s/app/deployment.yaml
@@ -28,7 +28,7 @@ spec:
         blue-green-no: "1"
     spec:
       nodeSelector:
-        kubernetes.io/hostname: k8s-master
+        kubernetes.io/hostname: desktop-dlopf19
       containers:
         - name: linky-backend-1
           image: parkheejun/linky-backend:1.0.0-20250808_152324
