--- a/apps/backend/k8s/mysql/mysql-pv.yaml
+++ b/apps/backend/k8s/mysql/mysql-pv.yaml
@@ -20,4 +20,4 @@ spec:
             - key: kubernetes.io/hostname
               operator: In
               values:
-                - k8s-master
+                - desktop-dlopf19
