chore: node selector update
2025-08-11
1. backend node selector 수정

--- a/apps/backend/k8s/mysql/mysql-deployment.yaml
+++ b/apps/backend/k8s/mysql/mysql-deployment.yaml
@@ -30,7 +30,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: mysql-secret
-              key: mysql-root-password
+              key: mysql-password
         - name: MYSQL_DATABASE
           valueFrom:
             secretKeyRef:
