feat: 어드민 CI/CD 구현
25-08-13
1. CI/CD 초기 구성 세팅
2. 테스트 중..

--- a/apps/frontend/rider/Jenkinsfile
+++ b/apps/frontend/rider/Jenkinsfile
@@ -5,8 +5,10 @@ pipeline {
         GIT_URL = "https://lab.ssafy.com/s13-webmobile3-sub1/S13P11C102.git"
         GIT_BRANCH = "test/jenkins-rider"
         GIT_CREDENTIALS_ID = "Gitlab"
-        DOCKER_IMAGE = "baejunyeong/linky-frontend-rider"
-        DOCKER_CONTAINER = "frontend-rider"
+        DOCKER_IMAGE_RIDER = "baejunyeong/linky-frontend-rider"
+        DOCKER_CONTAINER_RIDER = "frontend-rider"
+        DOCKER_IMAGE_CUSTOMER = "baejunyeong/linky-frontend-customer"
+        DOCKER_CONTAINER_CUSTOMER = "frontend-customer"
         IMAGE_TAG = "1.0.0"
     }
 
@@ -34,16 +36,29 @@ pipeline {
                 unstash 'frontend-source-code'
 
                 script {
-                    dir('apps/frontend/rider') {
-                        sh "echo Current directory: ${pwd()}"
-                        sh "echo Installing dependencies and building the application..."
-                        sh "npm install"
-                        sh "echo Building the application..."
-                        sh 'npm run build'
-                    }
+                    parallel(
+                        riderBuild: {
+                            dir('apps/frontend/rider') {
+                                sh "echo Current directory: ${pwd()}"
+                                sh "echo Installing dependencies and building the application..."
+                                sh "npm install"
+                                sh "echo Building the application..."
+                                sh 'npm run build'
+                            }
+                            stash includes: 'apps/frontend/rider/dist/**/*', name: 'frontend-rider-build'
+                        },
+                        customerBuild: {
+                            dir('apps/frontend/customer') {
+                                sh "echo Current directory: ${pwd()}"
+                                sh "echo Installing dependencies and building the application..."
+                                sh "npm install"
+                                sh "echo Building the application..."
+                                sh 'npm run build'
+                            }
+                            stash includes: 'apps/frontend/customer/dist/**/*', name: 'frontend-customer-build'
+                        }
+                    )
                 }
-
-                stash includes: 'apps/frontend/rider/dist/**/*', name: 'frontend-rider-build'
             }
         }
 
@@ -56,17 +71,31 @@ pipeline {
             }
             steps {
                 unstash 'frontend-source-code'
-                unstash 'frontend-rider-build'
-
                 script {
-                    dir('apps/frontend/rider') {
-                        sh "echo Current directory: ${pwd()}"
-                        sh "echo Building Docker image..."
-                        sh "docker build -t ${DOCKER_IMAGE}:${IMAGE_TAG} ."
-                    }
-                    sh "echo Docker image built successfully."
-                    sh "docker tag ${DOCKER_IMAGE}:${IMAGE_TAG} ${DOCKER_IMAGE}:latest"
+                    parallel(
+                        riderBuild: {
+                            unstash 'frontend-rider-build'
+                            dir('apps/frontend/rider') {
+                                sh "echo Current directory: ${pwd()}"
+                                sh "echo Building Docker image..."
+                                sh "docker build -t ${DOCKER_IMAGE_RIDER}:${IMAGE_TAG} ."
+                                sh "docker tag ${DOCKER_IMAGE_RIDER}:${IMAGE_TAG} ${DOCKER_IMAGE_RIDER}:latest"
+                                sh "echo Docker image for rider built successfully."
+                            }
+                        },
+                        customerBuild: {
+                            unstash 'frontend-customer-build'
+                            dir('apps/frontend/customer') {
+                                sh "echo Current directory: ${pwd()}"
+                                sh "echo Building Docker image for customer..."
+                                sh "docker build -t ${DOCKER_IMAGE_CUSTOMER}:${IMAGE_TAG} ."
+                                sh "docker tag ${DOCKER_IMAGE_CUSTOMER}:${IMAGE_TAG} ${DOCKER_IMAGE_CUSTOMER}:latest"
+                                sh "echo Docker image for customer built successfully."
+                            }
+                        }
+                    )
                 }
+                sh "echo Docker images built successfully for both rider and customer applications."
             }
         }
 
@@ -78,11 +107,17 @@ pipeline {
                 }   
             }
             steps {
-                sh "echo Deploying application..."
-                sh "docker stop ${DOCKER_CONTAINER} || true"
-                sh "docker rm ${DOCKER_CONTAINER} || true"
-                sh "docker run -d --name ${DOCKER_CONTAINER} --restart=unless-stopped -p 7080:7080 ${DOCKER_IMAGE}:${IMAGE_TAG}"
+                sh "echo Deploying rider application..."
+                sh "docker stop ${DOCKER_CONTAINER_RIDER} || true"
+                sh "docker rm ${DOCKER_CONTAINER_RIDER} || true"
+                sh "docker run -d --name ${DOCKER_CONTAINER_RIDER} --restart=unless-stopped -p 7080:7080 ${DOCKER_IMAGE_RIDER}:${IMAGE_TAG}"
                 sh "echo Application deployed successfully."
+
+                sh "echo Deploying customer application..."
+                sh "docker stop ${DOCKER_CONTAINER_CUSTOMER} || true"
+                sh "docker rm ${DOCKER_CONTAINER_CUSTOMER} || true"
+                sh "docker run -d --name ${DOCKER_CONTAINER_CUSTOMER} --restart=unless-stopped -p 7081:7081 ${DOCKER_IMAGE_CUSTOMER}:${IMAGE_TAG}"
+                sh "echo Customer application deployed successfully."
             }
         }
     }
