--- a/apps/frontend/Jenkinsfile
+++ b/apps/frontend/Jenkinsfile
@@ -9,6 +9,8 @@ pipeline {
         DOCKER_CONTAINER_RIDER = "frontend-rider"
         DOCKER_IMAGE_CUSTOMER = "baejunyeong/linky-frontend-customer"
         DOCKER_CONTAINER_CUSTOMER = "frontend-customer"
+        DOCKER_IMAGE_ADMIN = "frontend-admin"
+        DOCKER_CONTAINER_ADMIN = "baejunyeong/linky-frontend-admin"
         IMAGE_TAG = "1.0.0"
     }
 
@@ -57,6 +59,16 @@ pipeline {
                             }
                             stash includes: 'apps/frontend/customer/dist/**/*', name: 'frontend-customer-build'
                         }
+                        adminBuild: {
+                            dir('apps/frontend/web/administrator') {
+                                                                sh "echo Current directory: ${pwd()}"
+                                sh "echo Installing dependencies and building the application..."
+                                sh "npm install"
+                                sh "echo Building the application..."
+                                sh 'npm run build'
+                            }
+                            stash includes: 'apps/frontend/admin/dist/**/*', name: 'frontend-admin-build'
+                        }
                     )
                 }
             }
@@ -93,6 +105,16 @@ pipeline {
                                 sh "echo Docker image for customer built successfully."
                             }
                         }
+                        adminBuild: {
+                            unstash 'frontend-admin-build'
+                            dir('apps/frontend/web/administrator') {
+                                sh "echo Current directory: ${pwd()}"
+                                sh "echo Building Docker image for customer..."
+                                sh "docker build -t ${DOCKER_IMAGE_ADMIN}:${IMAGE_TAG} ."
+                                sh "docker tag ${DOCKER_IMAGE_ADMIN}:${IMAGE_TAG} ${DOCKER_IMAGE_ADMIN}:latest"
+                                sh "echo Docker image for customer built successfully."
+                            }
+                        }
                     )
                 }
                 sh "echo Docker images built successfully for both rider and customer applications."
@@ -118,6 +140,13 @@ pipeline {
                 sh "docker rm ${DOCKER_CONTAINER_CUSTOMER} || true"
                 sh "docker run -d --name ${DOCKER_CONTAINER_CUSTOMER} --restart=unless-stopped -p 7081:7081 ${DOCKER_IMAGE_CUSTOMER}:${IMAGE_TAG}"
                 sh "echo Customer application deployed successfully."
+
+                                sh "echo Deploying customer application..."
+                sh "docker stop ${DOCKER_CONTAINER_ADMIN} || true"
+                sh "docker rm ${DOCKER_CONTAINER_ADMIN} || true"
+                sh "docker run -d --name ${DOCKER_CONTAINER_ADMIN} --restart=unless-stopped -p 7081:7081 ${DOCKER_IMAGE_ADMIN}:${IMAGE_TAG}"
+                sh "echo Customer application deployed successfully."
+                
             }
         }
     }
