task : 프로젝트 설정 및 리소스 작업
25-08-13
1. vite.config.json 경로 작업
2. sidebar, header 사용 이미지 가져오기
3. package.json and -lock.json 검토

--- a/apps/frontend/web/administrator/package.json
+++ b/apps/frontend/web/administrator/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.11.0",
     "openvidu-browser": "^2.31.0",
     "pinia": "^3.0.3",
