--- a/apps/frontend/Jenkinsfile
+++ b/apps/frontend/Jenkinsfile
@@ -66,7 +66,7 @@ pipeline {
                                 sh "echo Building the application..."
                                 sh 'npm run build'
                             }
-                            stash includes: 'apps/frontend/web/administrator/dist/**/*', name: 'frontend-admin-build'
+                            stash includes: 'apps/frontend/admin/dist/**/*', name: 'frontend-admin-build'
                         }
                     )
                 }
@@ -106,7 +106,7 @@ pipeline {
                         },
                         adminBuild: {
                             unstash 'frontend-admin-build'
-                            dir('apps/frontend/web/administrator') {
+                            dir('apps/frontend/admin') {
                                 sh "echo Current directory: ${pwd()}"
                                 sh "echo Building Docker image for customer..."
                                 sh "docker build -t ${DOCKER_IMAGE_ADMIN}:${IMAGE_TAG} ."
