--- a/apps/frontend/admin/nginx.conf
+++ b/apps/frontend/admin/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 7082;
     server_name localhost;
 
-    location /rider/ {
+    location /admin/ {
         alias /usr/share/nginx/html/admin/;
         try_files $uri $uri/ /admin/index.html;
     }
