chore: ocr 서버 주소 수정
2025-08-13
1. 배포 버전 ocr 주소 수정

--- a/apps/backend/src/main/resources/application-dev.yaml
+++ b/apps/backend/src/main/resources/application-dev.yaml
@@ -22,3 +22,7 @@ spring:
     broker-url: ${MOSQUITTO_URL}
     client-id: ${MOSQUITTO_CLIENT_ID}
     topic: ${MOSQUITTO_CLIENT_ID}
+
+ocr:
+  server:
+    address: localhost
