--- a/apps/backend/src/main/resources/application-prod.yaml
+++ b/apps/backend/src/main/resources/application-prod.yaml
@@ -23,3 +23,7 @@ spring:
     broker-url: ${MOSQUITTO_URL}
     client-id: ${MOSQUITTO_CLIENT_ID}
     topic: ${MOSQUITTO_CLIENT_ID}
+
+ocr:
+  server:
+    address: 172.29.121.149
