--- a/apps/backend/src/main/resources/application.yaml
+++ b/apps/backend/src/main/resources/application.yaml
@@ -7,6 +7,17 @@ server:
   address: 0.0.0.0
   port: 8080
 
+  servlet:
+    session:
+      cookie:
+        name: LINKY_SESSION
+        http-only: true
+        secure: false
+        same-site: lax
+        max-age: 1800
+        path: /
+      timeout:
+
 spring:
   application:
     name: linky
