chore: postgres 저장 로직 변경
2025-08-13
1. protobuf 의존성 삭제

--- a/apps/backend/src/main/resources/application-dev.yaml
+++ b/apps/backend/src/main/resources/application-dev.yaml
@@ -7,7 +7,7 @@ spring:
     level:
       org.springframework.ai: DEBUG
       org.springframework.web.client: DEBUG
-      com.linky.api.aichat: DEBUG
+      com.linky.api: DEBUG
 
     pattern:
       console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
