--- a/apps/backend/src/main/resources/application-prod.yaml
+++ b/apps/backend/src/main/resources/application-prod.yaml
@@ -20,7 +20,7 @@ spring:
       port: ${REDIS_PORT}
 
   mqtt:
-    broker-url: ${MOSQUITTO_URL}
+    broker-url: tcp://172.30.1.50:1883
     client-id: ${MOSQUITTO_CLIENT_ID}
     topic: ${MOSQUITTO_CLIENT_ID}
 
