fix: 관리자 로그인 세션 시간 수정 25-08-14 1. 로그인 세션 2시간으로 수정

--- a/apps/backend/src/main/resources/application.yaml
+++ b/apps/backend/src/main/resources/application.yaml
@@ -14,9 +14,9 @@ server:
         http-only: true
         secure: false
         same-site: lax
-        max-age: 1800
+        max-age: 7200
         path: /
-      timeout:
+      timeout: 120m
 
 spring:
   application:
